--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "prerender-when-build-plugin",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "main": "index.js",
   "license": "MIT",
+  "keywords": ["prender", "webpack", "react", "vue"],
   "dependencies": {
     "express": "^4.17.1",
     "portfinder": "^1.0.28",
